# carshare

./: .coveragerc  .editorconfig  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entity_relationship_diagram.html  entrypoint.sh  example.json  insert-diagram.py  manage.py  node_modules  package-lock.json  pyproject.toml  pytest.ini  tailwind_start.sh  telemetry.json
.github/ISSUE_TEMPLATE/: bug_report.md  minor-enhancement.md
.github/workflows/: code-style.yml  docker.yml
backoffice/: apps.py  decorators.py  forms.py  tests.py  urls.py  utils.py  views.py
backoffice/templates/: backoffice_base.html
backoffice/templatetags/: user_utils.py
billing/: admin.py  forms.py  models.py  pricing.py  tasks.py  tests.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_billingaccount_approved_at.py  0002_initial.py  0003_alter_billingaccount_driver_profile_type.py  0003_billingaccount_business_address_line_1_and_more.py  0004_billingaccount_business_purchase_order.py  0004_billingaccountmemberinvitation.py  0005_alter_billingaccountmember_unique_together.py  0006_rename_create_at_billingaccountmemberinvitation_created_at_and_more.py  0007_alter_billingaccount_business_purchase_order.py
bookings/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0002_remove_booking_cancelled_booking_state.py  0003_booking_actual_end_time_booking_actual_start_time_and_more.py  0003_booking_billing_account.py  0003_booking_reason.py  0003_booking_updated_at.py  0004_alter_booking_state.py  0004_booking_stripe_invoice_item_id.py
bookings/templatetags/: utils.py
carshare/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
documentation/: insert-diagram.py  template_entity_relationship_diagram.html
drivers/: admin.py  apps.py  decorators.py  fields.py  forms.py  models.py  tests.py  urls.py  views.py
drivers/migrations/: 0001_initial.py  0002_alter_driverprofile_address_line_1_and_more.py  0002_initial.py  0003_alter_fulldriverprofile_approved_address_and_more.py  0003_alter_fulldriverprofile_dvla_summary_and_more.py  0003_driverprofile_submitted_at_and_more.py  0004_remove_fulldriverprofile_approved_licence_place_of_issue_and_more.py  0005_externaldriverprofile.py  (+1 more)
hardware/: admin.py  decorators.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
public/: tests.py  urls.py  views.py
securemedia/: apps.py  tests.py  urls.py  views.py
theme/: .gitignore
users/: adapter.py  admin.py  decorators.py  forms.py  models.py  sms.py  tests.py  urls.py  views.py
(+157 files in other folders)
